--- a/resources/chat.html
+++ b/resources/chat.html
@@ -8,14 +8,21 @@
       width: 100%;
     }
 
+    html, body {
+      box-sizing: border-box;
+      margin: 0; 
+      padding: 0;
+    }
+
     body {
       min-height: 100%;
-      font-family: 'Proxima Nova';
+      font-family: 'Proxima Nova', Helvetica, sans-serif;
       color: #333333;
-      padding: 10px;
+      padding: 30px;
       font-size: 80px;
       text-align: center;
       padding-top: 120px;
+      box-sizing: border-box;
     }
   </style>
 </head>
