--- a/resources/kelvin.html
+++ b/resources/kelvin.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>Chat</title>
+  <title>Kelvin</title>
   <style>
     html {
       height: 100%;
